fix logo in navbar on mobile devices

--- a/css Files/style.css
+++ b/css Files/style.css
@@ -4,35 +4,49 @@
         margin: 0;
         box-sizing: border-box;
         font-size: 62.5%;
-        background-color: #302c2e;
     }
     @font-face {
-        font-family: "Compacta";
-        src: url("../Resources/Fonts/unicode.compacta.ttf");
+        font-family: "Teko Bold";
+        src: url("../Resources/Fonts/Teko Font/Teko-Bold.ttf");
     }
     #huts a {
         color: rgb(17, 0, 255);      
     }
     #logo {
-        /* content: url("/Resources/Poster.png"); */
-        width: 50vw;
-        position: absolute;
-        top: 15vw;
-        left: 50vh;
-        z-index: 50;
+        display: none;
     }
     nav {
-        justify-content: center;
+        background-color: #302c2e;
         display: flex;
-        background-color: rgb(0, 0, 0);
         z-index: 777;
         position: sticky;
-        width: 100%;
+        width: 100vw;
+        height: 10vh;
         top: 0;
         left: 0;
+        align-items: center;
+    }
+    #menu_icon {
+        height: 70%;
+        margin-left: 1rem;
     }
 
+    #nav_logo {
+        height: 100%;
+        margin-left: 8rem;
+    }
+
+    nav ul {
+        display: none;
+    };
+
     #nav_spacer {
+        display: none;
+    }
+    #vidsection {
+        display: none;
+    }
+    #huts {
         display: none;
     }
 }
